# C-belts

./: .gitignore  CMakeLists.txt  Makefile  input.txt
include/: .#phone_number.h  booking.h  bus_manager.h  buses.h  database.h  date.h  ensure_equal.cpp  find_max_repetitions_count.cpp  get_ref_strict.cpp  ini.h  iterator_range.h  json.h  matrix.cpp  new_booking_providers.h  new_trip_manager.h  node.h  profile.h  query.h  rectangle.h  region.cpp  rendering.h  requests.h  responses.h  router.h  routes.h  search_server.h  simple_vector.h  simple_vector_2.h  square.cpp  stack_vector.h  stats.h  sum_reverse_sort.h  svg.h  task_status.cpp  team_tasks.cpp  test_runner.cpp  test_runner.h  transport_catalog.h  util.h
src/: Common.cpp  Solution.cpp  SortedStrings.cpp  airport_counter.cpp  banned_domains.cpp  booking.cpp  budget.cpp  bus_manager.cpp  buses.cpp  collide.cpp  comment_server.cpp  concurrent_map.cpp  correct.cpp  database.cpp  date.cpp  deque.cpp  descriptions.cpp  digital_book.cpp  dog.cpp  explore_key_words.cpp  expresses.cpp  figures.cpp  find_nearest_element.cpp  group_heavy_strings.cpp  hash_person.cpp  hash_point.cpp  hash_table.cpp  incognizable.cpp  ini.cpp  josephus_permutation.cpp  json.cpp  lazy_value.cpp  learner.cpp  lecture_title.cpp  linked_list.cpp  log.cpp  main.cpp  matrix_sum.cpp  merge_sort2.cpp  node.cpp  (+57 more)
